--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,10 @@ jobs:
       with:
         node-version: 16
     - name: Install dependencies
-      run: npm ci
+
+      run: |-
+        cd ./scrapper
+        npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
