--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,7 +21,9 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test
+      run: |-
+        npm install -D @playwright/test
+        npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
