fix for CI Scrapper

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,11 +18,7 @@ jobs:
       run: |-
         cd ./scrapper
         npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: |-
-        npm install -D @playwright/test
+        npx playwright install --with-deps
         npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
