--- a/scrapper/package.json
+++ b/scrapper/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "npx nodemon",
+    "start:prod": "npx playwright install && npx playwright install-deps && npx nodemon",
     "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "test": "npx playwright test",
